fix: improve color contrast

--- a/src/assets/style/_typography.scss
+++ b/src/assets/style/_typography.scss
@@ -108,8 +108,8 @@ ol {
 }
 
 .header-title {
-	background: var(--title-color);
-	color: var(--bg-color);
+	background: var(--cta-bg-color);
+	color: var(--header-bg-color);
 	width: fit-content;
 	padding: 0 5px;
 	margin: 0 0 1.5rem 0;
