--- a/src/assets/style/_variables.scss
+++ b/src/assets/style/_variables.scss
@@ -5,14 +5,15 @@ html {
 
 // Light default theme
 body {
-  --bg-color: #f3f7f9;
+  --header-bg-color: #fff;
+  --bg-color: #F1F1F1;
   --bg-content-color: white;
   --bg-code: #fffbf3;
   --body-color: #444;
-  --title-color: rgb(39, 39, 39);
-  --link-color: #e09b73;
-  --cta-color: #e4e4e4;
-  --cta-bg-color: rgb(39, 39, 39);
+  --title-color: #964c20;
+  --link-color: #b56530;
+  --cta-color: #ffffff;
+  --cta-bg-color: #b15f2f;
   --border-color: rgba(0, 0, 0, 0.1);
   --space: 0.5rem;
   --content-width: 860px;
@@ -34,6 +35,7 @@ body {
 
 // Override variables for light theme
 body[data-theme="dark"] {
+  --header-bg-color: #18191c;
   --bg-color: #18191c;
   --bg-content-color: #1e2023;
   --bg-code: rgba(0, 0, 0, 0.3);
